# tinylevel

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  rustfmt.toml
.github/workflows/: build.yml  check.yml  full.yml
.sqlx/: query-06cc780f1876253554647fef3b852efe7faed0cbd129af7dd34d3f6679a0498d.json  query-3c27b6f3979ef89f1b5dc6dfc06faf573846e9d3ccbe250918beef163226ff7a.json  query-681caf022eb477029e56d0cfde057f76a52970dbf662b7020e5ea5af04c7156b.json  query-6917870eb9733567a4c550bfaaef8d259c619a2fb7cba6ea12ff4db3ff263643.json  query-a6f716e10ef356bf8b90357cc96513e299823ef7eb86bf83831f2a024da6f27f.json  query-ab09a0f8e4732de919a7c73a8262147efe1be54f874664d8518fca84d4e854ae.json  query-b41c1bed6d47daefcd02ddd4a4dbf659349a1bacf28e735671606d6cbd3cb36c.json
migrations/: 20230622013524_user_tables.sql
src/: main.rs
