[package]
name = "tinylevel"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
twilight-util = { version = "0.16.0-rc.1", features = ["builder"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twilight-validate = "0.16.0-rc.1"
twilight-gateway = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
twilight-http = "0.16.0-rc.1"
expiringmap = "0.1"
valk-utils = "0.1"
tracing = "0.1"
thiserror = "1"
vss = "0.1"
