[package]
name = "tinylevel"
version = "0.1.0"
edition = "2021"

[dependencies]
twilight-gateway = { version = "0.16.0-rc.1", default-features = false, features = ["rustls-webpki-roots", "zlib-stock"] }
twilight-http = { version = "0.16.0-rc.1", default-features = false, features = ["rustls-webpki-roots", "hickory"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
twilight-util = { version = "0.16.0-rc.1", features = ["builder"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["json"] }
twilight-model = "0.16.0-rc.1"
valk-utils = "0.1"
tracing = "0.1"
thiserror = "1"
vss = "0.1"
